--- a/WangziHairCutAdmin.plist
+++ b/WangziHairCutAdmin.plist
@@ -10,6 +10,8 @@
 				<dict>
 					<key>kind</key>
 					<string>software-package</string>
+                    <key>url</key>
+                    <string>https://xuxiaojiang.github.io/WangziHairCutAdmin.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
