--- a/WangziHairCutAdmin.plist
+++ b/WangziHairCutAdmin.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.must2334.WangziHairCutAdmin</string>
+				<string>com.must2334.WangziHairCutAdmin2</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
